inst/htmlTemplates/qaReport.css
/* ----------- general page layout -----------*/

body
{
  font-family:helvetica,arial,sans-serif;
  padding:0px;
  margin:0px;
  margin-right:1%;
}


/* --------- end general page layout ---------*/


/* --------------- table header --------------*/

/*bounding table*/
table.QA
{
  border:2px solid black;
  border-collapse:collapse;
  border-spacing:0px;
  width:100%;
  padding:0px;
  margin-left:0.5%;
  margin-bottom:33px;
  margin-top:0.5%;
}


tr.QAHeader
{
  background-color:#c9d8e5;
  margin:0px;
  padding:0px;
}

th.QAHeader
{ 
  border-right:1px solid black;
  font-size:14px;
  white-space:nowrap;
}

tr.QASummary
{
  background-color:#c9d8e5;
  margin:0px;
  padding:0px;
  border-bottom:2px dotted black;
}

th.QASummary
{ 
  border-right:1px solid black;
}

td.QASummary
{ 
  border-right:1px solid black;
  text-align:center; 
}


div.QASumButton
{  
  color:#05006d;
  margin:5px 10px;
  padding:5px 0px;
}

div.QASumButton:hover
{ 
  color: #76ade0;
  cursor:pointer;
}

img.QASummary
{
  background-color:transparent;
  margin:20px 0px;
  padding:3px;
  display:none;
  
}
img.QASummary:hover
{
  background-color:#76ade0;
  cursor:pointer;
}

table.QAParameter
{
  border-collapse:collapse;
  border-spacing:0px;
  border:none;
  margin:5px;
  margin-bottom:10px;
}

th.QAParameter
{
  padding:3px 6px;
  border-bottom:1px dotted white;
  border-right:1px dotted white;	
  font-size:13px;
}

th.QAParameterRight
{
  padding:3px 6px;
  border-bottom:1px dotted white;	
  font-size:13px;
}


td.QAParameter
{
  border-right:1px dotted white;
  font-size:12px;
  text-align:center;
  padding:3px 6px;
}

td.QAParameterRight
{
  font-size:12px;
  text-align:center;
  padding:3px 6px;
}


tr.QAFrameHeaderOdd
{
  background-color:#a8ccee;
  padding:0px;
  margin:0px;
}

tr.QAFrameHeaderEven
{
  background-color:#c9d8e5;
  padding:0px;
  margin:0px;
}

th.QAFrameHeader
{ 
  width:20%;
  border-right:1px solid black;
  font-size:14px;
  padding-bottom:5px;
  text-align:left;
  padding-left:5px;
}

div.QAGrpHeader
{
  padding-top:5px;
  margin-left:8px;
  padding-left:5px;
  margin-bottom:9px;
  margin-right:16px;
  font-size:19px;
  white-space:nowrap;
  border-bottom:2px dotted white;
  color:white;
  position:relative;
  left:0px;	
}

div.QAFrameHeaderNr
{
  margin:0px;
  padding:0px;
  padding-left:5px;
  font-size:12px;
  color:white;
  font-weight:bolder;
  margin-right:100%;
  white-space:nowrap;
  position:relative;
}

span.QAFrameHeaderGrp
{
  font-size:11px;
  position:relative;
  top:8px;
  color:white;
  margin-left:20px;
  white-space:nowrap;
}

span.QAFrameHeaderID
{
  padding-left:10px;
}

table.QAFrameHeaderEvenPheno
{
  margin-top:20px;
  border-collapse:collapse;
  border-spacing:0px;
  border:3px solid  #c9d8e5;
  margin-bottom:15px;
}

table.QAFrameHeaderOddPheno
{
  margin-top:20px;
  border-collapse:collapse;
  border-spacing:0px;
  border:3px solid #a8ccee;
  margin-bottom:15px;
}

th.QAPheno
{
  padding:3px 6px;
  border:1px dotted white;	
  font-size:13px;
}

td.QAPheno
{
  border-right:1px dotted white;
  font-size:12px;
  text-align:center;
  padding:3px 6px;
}

td.QASumAggr
{ 
  border-left:1px solid black;
}

td.QADetAggr
{ 
  border-left:0px dotted white;
  margin:0px;
  padding:0px;
  width:0px;
}

td.QASumGraph
{ 
  border-left:1px solid black;
}

td.QADetGraph
{ 
  border-left:0px dotted white;
  margin:0px;
  padding:0px;
  width:0px;
}

div.QARowButton
{  
  color:#05006d;
}

div.QARowButton:hover
{  
  color:#76ade0;
  cursor:pointer;
}

div.QAFrameButton
{  
  color:#05006d;
  margin:15px 10px;
  padding:0px;
  width:20px;
  height:20px;
}

div.QAFrameButton:hover
{ 
  outline: 3px solid #76ade0;
  cursor:pointer;
}


div.QADetButton
{  
  margin:3px 7px;
  padding:2px;
  display:none;
  font-size:10px;
}

div.QADetButton:hover
{ 
  color:#76ade0;
  cursor:pointer;
}


img.QASumGraph
{ 
  margin:5px;
  padding:3px;
  display:none;
  
}

img.QASumGraph:hover
{
  background-color:#76ade0;
  cursor:pointer;
}

img.QADetGraph
{
  margin:5px;
  padding:3px;
  display:none;
}

img.QADetGraph:hover
{
  background-color:#76ade0;
  cursor:pointer;
}

div.QADetTrigger
{
  color:#05006d;
  margin-top:3px;
  margin-left:3px;
  float:left;
  position:absolute;
  top:0px;
  font-size:20px;
  font-weight:bold;
  z-index:10;
}

div.QADetTrigger:hover
{
  color:#76ade0;
  cursor:pointer;
}

span.QAPages
{
  font-weight:bold;
  font-size:15px;
  color:#05006d;
  padding:5px 8px;
}

span.QAPages:hover
{
  color:#76ade0;
  cursor:pointer;
}

span.QAPanelsAct
{
  font-weight:bold;
  font-size:13px;
  padding:5px 8px;
  color:#76ade0;
}

span.QAPanelsAct:hover
{
  color:#76ade0;
  cursor:pointer;
}

a.QAPanelsAct:hover
{
  color:darkred;
  cursor:pointer;
}

a.QAPanelsAct
{
  color:darkred;
}


span.QAPanels
{
  font-weight:bold;
  font-size:13px;
  color:#05006d;
  padding:5px 8px;
}

span.QAPanels:hover
{
  color:#76ade0;
  cursor:pointer;
}

a
{
color:#05006d;
text-decoration:none;
}

a:hover
{
  color:#76ade0;
  cursor:pointer;
}

div.QAPagesTile
{  
  border-top:2px solid black;
  position:fixed;
  bottom:0px;
  margin-left:1%;
  margin-right:1%;
  margin:0px;
  padding-left:20px;
  padding-top:3px;
  background-color:white;
  width:100%;
  height:30px;
}




/* ------------- end table header -------------*/







/* --------------- aggregators ----------------*/

/*binary aggregtor*/
img.QABinAggr
{
  width:17px;
  height:17px;
  border-style:none;
  padding:0px;
  margin:0px;
}

/*range aggregtor*/
table.QARangeAggr
{
  width:40px;
  height:10px;
  border:1px solid black; 
  border-spacing:0px;
  padding:1px; 
  margin:2px
}

/*range aggregtor*/
td.QARangeAggr
{
  height:10px;
  padding:0px;
  margin:0px;
}

/*range aggregtor*/
td.QARangeAggrPass
{
  height:10px;
  background-color:green; 
  padding:0px;
  margin:0px;
}

/*range aggregtor*/
td.QARangeAggrFail
{
  height:10px;
  background-color:red; 
  padding:0px;
  margin:0px;
}


/*factor aggregtor*/
span.QAFactAggr
{
  margin:0px 3px;
  font-size:13px;
}

/*string aggregtor*/
span.QAStringAggr
{
  margin:0px 3px;
  font-size:13px;
}

/*numeric aggregtor*/
span.QANumAggr
{
  margin:0px 3px;
  font-size:13px;
}





/* --------------- summary page ----------------*/
table.qaBar
{	
  empty-cells:show;
  padding:2px 4px 4px 4px;
}

table.qaPanelBound
{	
  padding:10px 20px;
}

table.qaSumBar
{
  empty-cells:show;
  padding:2px 4px 4px 4px;
  cursor:pointer;
}
 
td.qaBarPassedOdd 
{
  background-color:green; 
  width:20px; 
  height:20px;
  border-top:2px solid #a8ccee;
}
      
td.qaBarFailedOdd 
{
  background-color:red;
  width:20px; 
  height:20px;
  border-top:2px solid #a8ccee;
}
      
td.qaBarEmptyOdd
{
  background-color:#a8ccee; 
  width:20px; 
  height:20px;
  border-top:2px solid #a8ccee;
}

td.qaBarPassedEven
{
  background-color:green; 
  width:20px; 
  height:20px;
  border-top:2px solid #c9d8e5;
}
      
td.qaBarFailedEven 
{
  background-color:red;
  width:20px; 
  height:20px;
  border-top:2px solid #c9d8e5;
}
      
td.qaBarEmptyEven
{
  background-color:#a8ccee; 
  width:20px; 
  height:20px;
  border-top:2px solid #c9d8e5;
}
      
th.qaBar
{
  padding-right:10px;
  text-align:right; 
  font-size:11px;
  color:white;
}

table.qaPanelSummary
{
  border-collapse:collapse;
  empty-cells:show;
  padding:2px 4px 4px 4px;
}

th.qaPanelSummaryTop
{
  font-size:14px;
  padding:5px 10px;
  border-bottom:2px solid white;
  cursor:pointer;
}

th.qaPanelSummaryTop:hover
{
  font-size:14px;
  padding:5px 10px;
  border-bottom:2px solid white;
  color: #76ade0;
}


th.qaPanelSummaryRight
{
  font-size:14px;
  padding:5px 10px;
  border-right:2px solid white;
  border-bottom:2px solid white;
}

tr.qaPanelSummaryOdd
{
  background-color:#a8ccee;
  padding:5px;
  margin:5px;
  color:#05006d;
}

tr.qaPanelSummaryEven
{
  background-color:#c9d8e5;
  padding:5px;
  margin:5px;
  color:#05006d;
}

td.qaPanelSummary
{
  padding:5px 0px;
  border-bottom: 2px solid white;
}

td.qaPanelSummarySum
{
  padding:5px 20px;
  border-bottom: 2px solid white;
  border-right: 2px solid white;
}

span.qaPanelSummarySub
{
  font-size:10px;
}

span.qaPanelSummary
{
  font-size:18px;
}

